# assembly_models

./: CMakeLists.txt  README.md  package.xml
battat/: HolderBottomWing.stl  HolderWindow.stl  Plane_horizontal_holder_tall.stl
battat/Inventor_files/: Plane_horizontal_holder_tall.ipt
battat/convention/: bolt.stl  bottom_wing.stl  bottom_wing_hq.stl  chassis.stl  front_wheel.stl  holder_bolt.stl  holder_bottom_wing.stl  holder_plane_horizontal.stl  holder_plane_horizontal_tall.stl  holder_plane_vertical.stl  holder_top_wing.stl  holder_underbody.stl  holder_upper_body.stl  holder_window.stl  nut.stl  rear_wing.stl  rear_wing_hq.stl  top_wing.stl  underbody.stl  underbody_hq.stl  upper_body.stl  window.stl
fixtures/: big_wooden_plate.stl
