<?xml version="1.0"?>
<package>
  <name>assembly_models</name>
  <description>
    STL and collada models of assembly parts.
  </description>
  <version>0.1.0</version>
  <maintainer email="danielb@cs.uni-bremen.de">Daniel Beßler</maintainer>
  <author email="danielb@cs.uni-bremen.de">Daniel Beßler</author>
  <license>EUPL v1.1</license>

  <buildtool_depend>catkin</buildtool_depend>
</package>
